2001-11-02  Mads Bondo Dydensborg  <madsdyd@ripley>
        * Graphics
	Added graphics from Bjarke
	Changed size of screen to 800x600
	Changed maps (map1.py and map2.py)
	Added toggle between fullscreen and window 

2001-10-21  Mads Bondo Dydensborg  <madsdyd@ripley>

	* Python
	Fixed the bugs that made it impossible to run maps.

2001-10-18  Mads Bondo Dydensborg  <madsdyd@ripley.localdomain>

	* Stuff
	Added a LogLineExt method to the log system.

2001-10-15  Mads Bondo Dydensborg  <madsdyd@dydensborg.dk>

	* Structure
	Moved some stuff around in preparation for having the
	client control the "session" more. 
	Loads a default map.
	Beginning to add support for scripted events on collisions.
	
2001-10-13  Mads Bondo Dydensborg  <madsdyd@dydensborg.dk>

	* GameTime
	Changed the code in client, to include finer graded virtuel
	simulated time. (Fancy words, simple thing).

2001-10-11  Mads Bondo Dydensborg  <madsdyd@dydensborg.dk>

	* Collision
	Collision code is ok, but the actions carried out on a collosion
	is not.
	Added a ball which gets loaded when map1.py is loaded.

2001-10-07  Mads Bondo Dydensborg  <madsdyd@dydensborg.dk>

	* Python
	Fixed problem with crashing python.

2001-10-07  Mads Bondo Dydensborg  <madsdyd@dydensborg.dk>

	* Map loading
	Map loading now includes static objects and the paddle.

2001-10-05  Mads Bondo Dydensborg  <madsdyd@dydensborg.dk>

	* Paddle
	Moved the paddle to the gamestate, where it belongs
	Due to some weirdness in the collision detection code, 
	it was neccesary to fixate one of the moving ovals.

2001-10-04  Mads Bondo Dydensborg  <madsdyd@dydensborg.dk>

	* Version 0.0.6
	Jonas have added paths, motion, bounding boxes and simple
	collision detection. No comments, though :-)
	I added some more autoconf voodoo to fix embedding python, and a
	beginning of map loading.
	Tagging this is version 0.0.6

2001-09-28  Mads Bondo Dydensborg  <madsdyd@dydensborg.dk>

	* Interprenter